<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.PembayaranActivity"
    android:orientation="vertical"
    android:padding="14dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pembayaran"
        android:textSize="40sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/payVA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/virtual_account_bni"
        android:textSize="30sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/norek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/stotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rp_0"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/konfirmasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/konfirmasi"
            app:cornerRadius="300dp"
            android:layout_gravity="bottom"/>
    </FrameLayout>
</LinearLayout>