<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DetailActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hallo_dunia"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hallo_dunia"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mulai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:text="@string/start"
            android:layout_gravity="center"
            android:layout_margin="16dp"/>

        <TextView
            android:id="@+id/jumlah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hallo_dunia"
            android:layout_gravity="center"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:stretchColumns="*">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.card.MaterialCardView
                    style="@style/Widget.MaterialComponents.CardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/mtrl_card_spacing"
                    android:layout_marginTop="@dimen/mtrl_card_spacing"
                    android:layout_marginRight="@dimen/mtrl_card_spacing"
                    android:minHeight="150dp">

                    <!-- Card contents. -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/mulai"
                            android:gravity="center"
                            android:layout_marginBottom="16dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/mulai"
                            android:gravity="center"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/mulai"
                            android:gravity="center"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    style="@style/Widget.MaterialComponents.CardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/mtrl_card_spacing"
                    android:layout_marginTop="@dimen/mtrl_card_spacing"
                    android:layout_marginRight="@dimen/mtrl_card_spacing"
                    android:minHeight="150dp">

                    <!-- Card contents. -->

                </com.google.android.material.card.MaterialCardView>
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tambahhapus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tambah"
            app:cornerRadius="300dp"
            android:layout_gravity="bottom"/>
    </FrameLayout>
</LinearLayout>